--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: MyMicrobiomeTools
 Title: Identify prevalence and mean relative abundance on a taxa by taxa basis
 Version: 0.0.0.9000
-Authors@R: 
-    person("Elyse", "Barker", , "bark9299@vandals.uidaho.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Authors@R: person("Elyse", "Barker", role = c("aut", "cre"),
+                     email = "bark9299@vandals.uidaho.edu")
 Description: calculates the mean relative abundance and prevalence from a phyloseq object You input the hash id of the taxa of interest, your phyloseq object, and what category you want to look at this function automatically calculates to relative abundances so input phyloseq object needs to be raw counts need to have one column in the metadata be only one body site/environment of interest.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
+Imports: 
+    microbiome,
+    phyloseq,
+    dplyr,
+    devtools,
+    stats
